# sabaton-hal

./: Cargo.toml
src/: bootloader.rs  digest.rs  lib.rs  update.rs  verity.rs
testdata/: verity_rsa-2048-private-key.pk8
