[package]
name = "sabaton-hal"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde"] }
semver = {version = "1.0.4", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
ring = "0.16.20"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
data-encoding = "2.3.2"
bincode = "1.3.3"
log = "0.4"